--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -3,21 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>API Front-end</title>
+  <title>Página Principal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Login de Usuário -->
-  <h1>Login de Usuário</h1>
-  <form id="loginForm">
-    <input type="email" id="loginEmail" placeholder="Email" required>
-    <input type="password" id="loginPassword" placeholder="Senha" required>
-    <button type="submit">Entrar</button>
-  </form>
-
-  <!-- Botão de Logout -->
-  <button id="logoutButton" style="display: none;">Sair</button>
+  <!-- <h1>Login de Usuário</h1> -->
+  <button id="logoutButton">Sair</button>
+  <div id="welcomeMessage"></div>
 
   <!-- Cadastro de Usuário -->
   <h1>Cadastro de Usuário</h1>
@@ -44,6 +38,24 @@
   <!-- Lista de Usuários -->
   <h1>Lista de Usuários</h1>
   <div id="userList"></div>
+
+  
+  <!-- Registrar Transação
+<h1>Registrar Transação</h1>
+<form id="transactionForm">
+  <input type="text" id="userName" placeholder="Nome do Usuário" required>
+  <input type="text" id="bookTitle" placeholder="Título do Livro" required>
+  <input type="number" id="amount" placeholder="Quantidade" required>
+  <button type="submit">Registrar Transação</button>
+</form>
+
+
+
+  Lista de Transações 
+<h1>Lista de Transações</h1>
+<div id="transactionList"></div>  -->
+
+  
 
   <script src="script.js" defer></script>
 </body>
